# digitallibrary

./: README.md  brainstrome.txt
LMS/: pyproject.toml  requirements.txt  user_resources.csv  vercel.json
LMS/LMS/: settings.py  urls.py  wsgi.py
LMS/api/: admin.py  models.py  serializers.py  urls.py  views.py
LMS/api/Models/: example.py  user_constuct.py
LMS/api/migrations/: 0001_initial.py  0002_alter_resources_resource_id.py  0002_alter_resources_tags.py  0002_alter_tags_table.py  0002_alter_user_email.py  0002_alter_user_userid.py  0002_alter_users_profile_pic.py  0002_remove_users_school_id_alter_users_email.py  0003_alter_user_options_alter_user_table_comment_and_more.py  0003_alter_user_userid.py  0003_alter_userresourceinteraction_dislikes_and_more.py  0003_alter_users_email_alter_users_id.py  0003_alter_users_options_alter_users_table.py  0003_alter_users_phone_number.py  0004_alter_user_userid.py  0004_alter_users_email_alter_users_id.py  0004_alter_users_options_alter_users_table.py  0004_remove_userresourceinteraction_dislikes_and_more.py  0004_resources_uploaded_by.py  0004_users_alter_user_table_comment.py  0005_alter_resources_uploaded_by.py  0005_alter_user_userid.py  0005_alter_userresourceinteraction_resource_id.py  0005_alter_users_profile_pic.py  0005_rename__id_users_id.py  0006_alter_user_id.py  0006_alter_userresourceinteraction_user_id.py  0006_alter_users_password.py  0006_alter_users_phone_number.py  0006_alter_users_school_id.py  0007_alter_resources_resource_image.py  0007_alter_user_userid.py  (+11 more)
LMS/templates/: test.html
(+46 files in other folders)
